@@ -108,9 +108,11 @@ def launch(config):
         # this is copied from bin/twistd. twisted-2.0.0 through 2.4.0 use
         # _twistw.run . Twisted-2.5.0 and later use twistd.run, even for
         # windows.
-        from twisted import version
-        if (platformType == "win32"
-            and (version.major == 2 and version.minor < 5)):
+        from twisted import __version__
+        major, minor, ignored = __version__.split(".", 2)
+        major = int(major)
+        minor = int(minor)
+        if (platformType == "win32" and (major == 2 and minor < 5)):
             from twisted.scripts import _twistw
             run = _twistw.run
         else:
